// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render WordForm correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Word in Serbo-Croatian"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Word in German"
      type="text"
      value=""
    />
    <button>
      Add
    </button>
  </form>
</div>
`;

exports[`should render WordForm with word data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Word in Serbo-Croatian"
      type="text"
      value="dobro"
    />
    <input
      onChange={[Function]}
      placeholder="Word in German"
      type="text"
      value="gut"
    />
    <button>
      Save
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Word in Serbo-Croatian"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Word in German"
      type="text"
      value=""
    />
    <button>
      Add
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 2`] = `
<div>
  <p>
    Please provide a word and its translation in your language.
  </p>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Word in Serbo-Croatian"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Word in German"
      type="text"
      value=""
    />
    <button>
      Add
    </button>
  </form>
</div>
`;
